Fix: menambahkan endpoint dashboard admin
