# routes/web.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\DepositController;
 use App\Http\Controllers\WithdrawalController;
+use App\Http\Controllers\AdminController;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/', function () {
@@ -23,6 +24,14 @@ Route::middleware(['web'])->prefix('api')->group(function () {
     Route::middleware('name.token')->group(function () {
         Route::apiResource('deposit', DepositController::class);
         Route::apiResource('withdrawal', WithdrawalController::class);
+    });
+    // Admin routes
+    Route::prefix('admin')->group(function () {
+        Route::post('/login', [AdminController::class, 'login']);
+        Route::post('/logout', [AdminController::class, 'logout']);
+        Route::middleware('jwt.auth')->group(function () {
+            Route::get('/dashboard/transactions', [AdminController::class, 'getTransactions']);
+        });
     });
 });
 
